feat: add autocompletion for slash command (#1170)
Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>

--- a/crates/forge_main_neo/Cargo.toml
+++ b/crates/forge_main_neo/Cargo.toml
@@ -29,6 +29,7 @@ lazy_static.workspace = true
 tracing.workspace = true
 futures.workspace = true
 ansi-to-tui.workspace = true
+convert_case.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
