--- a/profiles.default.yaml
+++ b/profiles.default.yaml
@@ -2,6 +2,9 @@
 # For example, for the 'openai' provider, set OPENAI_API_KEY.
 
 - name: Default
+  # provider: "openai"
+  # api_key: "sk-..."
+  # base_url: "sk-..."
   model: "gpt-4"
 
 - name: OpenRouter
