--- a/profiles.default.yaml
+++ b/profiles.default.yaml
@@ -2,10 +2,25 @@
 # For example, for the 'openai' provider, set OPENAI_API_KEY.
 
 - name: Default
-  # provider: "openai"
+  provider: "openai"
   # api_key: "sk-..."
   # base_url: "sk-..."
   model: "gpt-4"
 
 - name: OpenRouter
   provider: "openrouter"
+
+- name: Requesty
+  provider: "requesty"
+
+- name: Anthropic
+  provider: "anthropic"
+
+- name: Xai
+  provider: "xai"
+
+- name: Zai
+  provider: "zai"
+
+- name: Cerebras
+  provider: "cerebras"
