--- a/crates/forge_display/Cargo.toml
+++ b/crates/forge_display/Cargo.toml
@@ -13,6 +13,7 @@ regex.workspace = true
 termimad.workspace = true
 syntect = "5.2"
 lazy-regex = "3.0"
+crossterm = "0.29.0"
 
 [dev-dependencies]
 insta.workspace = true
