feat: partially fix rendering

--- a/crates/forge_display/Cargo.toml
+++ b/crates/forge_display/Cargo.toml
@@ -14,6 +14,8 @@ termimad.workspace = true
 syntect = "5.2"
 lazy-regex = "3.0"
 crossterm = "0.29.0"
+textwrap = { version = "0.16.0", features = ["terminal_size"] }
+wrap-ansi = "0.1"
 
 [dev-dependencies]
 insta.workspace = true
