--- a/crates/forge_spinner/Cargo.toml
+++ b/crates/forge_spinner/Cargo.toml
@@ -9,8 +9,7 @@ colored.workspace = true
 tokio.workspace = true
 indicatif = "0.18.0"
 rand = "0.9.2"
-crossterm = "*"
+crossterm.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
-crossterm = "*"
